app/src/App.css
html, body {
    width: 100%;
    height: 100%;
    background: #19334d;
}

.App {
    text-align: center;
    width: 100%;
    max-width: 480px;
    height: 100vh;
    /*max-height: 900px;*/
    background-color: var(--body-background-color);
    position: relative;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.App-header {
    height: 100px;
    padding-top: 46px;
    display: flex;
    flex-direction: row;
    justify-content: center;

}

.toggle-theme {
}

.app-logo {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    justify-content: center;
}

.logo-image {
    height: 72px;
    max-height: 60%;
    margin-right: 5px;
}

.logo-text {
    font-size: 64px;
    font-family: Baskerville, sans-serif;
    margin: 0;
    color: var(--sharp-contrast-color-1);
}


.App-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 100%;
    width: 100%;
}

.weather-icons .icon {
    color: var(--sharp-contrast-color-2);
    font-size: var(--font-size-h3);
    min-height: unset;
    height: var(--font-size-h3);
    margin: 0;
}

.recommendation {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    height: 40%;
    width: 80vw;
    max-width: 480px;
}

.weather-container {
    display: flex;
    align-items: center;
    /*flex-grow: 1;*/
    width: 80vw;
    max-width: 460px;
}


.bottom-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-bottom: 2%;
    padding-top: 2%;
}

.toggle-weather-display {

    padding-left: 3%;

}

.toggle-day {
    padding-right: 3%;

}

.input-and-button {
    display: flex;
    flex-direction: row;
    width: 55vw;
    justify-content: space-around;
}

.flex-row {
    flex-direction: row;
}

.hidden {
    display: none;
}

p {
    font-size: var(--font-size-body);
    color: var(--body-font-color);
}

h1 {
    font-size: var(--font-size-h1);
    color: var(--h1-color);
    margin-top: 0;
    margin-bottom: 48px;
}

h2 {
    font-size: var(--font-size-h2);
    color: var(--heading-color);
    margin: 0;
}

h3 {
    font-size: var(--font-size-h3);
    color: var(--heading-color);
    margin: 0;
}

h4 {
    font-size: var(--font-size-h4);
    color: var(--heading-color);
    margin: 0;
}

